[SPv175] setNeedsRepaint when local border box properties change.

When ancestors change their paint properties, the LocalBorderBoxProperties
of a descendant can update. In SPv175 we need this to cause a repaint, because
the descendant's paint chunks depend on the LocalBorderBoxProperties.

This is only reproducible in SPv175 with a composited child layer, because
otherwise a recursive setNeedsRepaint would apply during style update; that
recursive update does not recurse into composited children. In SPv2 mode
it should reproduce regardless.

Bug: 810684
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ic2f7303cde077ff7ae3fdf078d7aac1901a1b25f
Reviewed-on: https://chromium-review.googlesource.com/912458
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535931}